--- a/.bazelrc
+++ b/.bazelrc
@@ -2,3 +2,9 @@ common --enable_bzlmod
 
 common --incompatible_strict_action_env
 common --sandbox_default_allow_network=false
+
+common --aspects=//tools/bazel/aspects:wrapper_check.bzl%wrapper_check_aspect
+common --aspects=@rules_rust//rust:defs.bzl%rust_clippy_aspect
+common --output_groups=+clippy_checks
+
+common:strict --@rules_rust//rust/settings:clippy_flags=-D,warnings
