--- a/compiler/cli/BUILD.bazel
+++ b/compiler/cli/BUILD.bazel
@@ -1,10 +1,8 @@
-load("@rules_rust//rust:defs.bzl", "rust_binary")
+load("//tools/bazel/macros:rust.bzl", "rust_binary")
 
 rust_binary(
     name = "main",
     srcs = ["main.rs"],
-    crate_root = "main.rs",
-    edition = "2024",
     deps = [
         "//compiler/frontend",
         "//compiler/middle",
