--- a/compiler/frontend/BUILD.bazel
+++ b/compiler/frontend/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
     name = "frontend",
@@ -9,7 +9,5 @@ rust_library(
         "lib.rs",
         "parser.rs",
     ],
-    crate_root = "lib.rs",
-    edition = "2024",
     visibility = ["//visibility:public"],
 )
