--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -36,3 +36,6 @@ crate.from_cargo(
     validate_lockfile = True,
 )
 use_repo(crate, "crates")
+
+bazel_dep(name = "aspect_rules_lint", version = "2.0.0")
+bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2")
