--- a/compiler/cli/BUILD.bazel
+++ b/compiler/cli/BUILD.bazel
@@ -5,6 +5,7 @@ rust_binary(
     srcs = ["main.rs"],
     visibility = ["//visibility:public"],
     deps = [
+        "@crates//:clap",
         "//compiler/frontend",
         "//compiler/middle",
     ],
