--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,9 +4,24 @@ default_install_hook_types:
 repos:
     - repo: local
       hooks:
-          - id: bazel-format
+          - id: format
             name: Format
             entry: bazel run //:format
             language: system
             stages: [pre-push]
-            pass_filenames: true
+            always_run: true
+            pass_filenames: false
+          - id: build
+            name: Build
+            entry: bazel build //...
+            language: system
+            stages: [pre-push]
+            always_run: true
+            pass_filenames: false
+          - id: test
+            name: Test
+            entry: bazel test //...
+            language: system
+            stages: [pre-push]
+            always_run: true
+            pass_filenames: false
