--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,3 +25,10 @@ repos:
             stages: [pre-push]
             always_run: true
             pass_filenames: false
+          - id: typos
+            name: Typos
+            entry: bazel run --run_in_cwd @multitool//tools/typos
+            language: system
+            stages: [pre-push]
+            always_run: true
+            pass_filenames: false
