--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,5 +1,6 @@
 module(name = "lang0")
 
+bazel_dep(name = "bazel_skylib", version = "1.9.0")
 bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.5.4")
 
 register_toolchains(
