--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,5 +1,3 @@
-load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
-load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
 load("@rules_rust//cargo:defs.bzl", "extract_cargo_lints")
 
 extract_cargo_lints(
@@ -8,36 +6,8 @@ extract_cargo_lints(
     visibility = ["//visibility:public"],
 )
 
-copy_file(
-    name = "taplo_executable",
-    src = "@multitool//tools/taplo",
-    out = "taplo_bin",
-    is_executable = True,
-)
-
-format_multirun(
+alias(
     name = "format",
-    javascript = "@multitool//tools/deno",
-    javascript_check_args = [
-        "fmt",
-        "--indent-width",
-        "4",
-        "--check",
-    ],
-    javascript_fix_args = [
-        "fmt",
-        "--indent-width",
-        "4",
-    ],
-    markdown = "@multitool//tools/deno",
-    markdown_check_args = [
-        "fmt",
-        "--check",
-    ],
-    markdown_fix_args = ["fmt"],
-    rust = "@rules_rust//rust/toolchain:current_rustfmt_toolchain",
-    shell = "@aspect_rules_lint//format:shfmt",
-    starlark = "@buildifier_prebuilt//:buildifier",
-    toml = ":taplo_executable",
+    actual = "//tools/format:format",
     visibility = ["//visibility:public"],
 )
