Set up keep sorted; minor styleguide notes

--- a/tools/format/BUILD.bazel
+++ b/tools/format/BUILD.bazel
@@ -16,12 +16,14 @@ rust_binary(
         ":taplo_tool",
         "@buildifier_prebuilt//:buildifier",
         "@multitool//tools/deno",
+        "@multitool//tools/keep-sorted",
         "@multitool//tools/shfmt",
         "@rules_rust//rust/toolchain:current_rustfmt_toolchain",
     ],
     rustc_env = {
         "BUILDIFIER": "$(rlocationpath @buildifier_prebuilt//:buildifier)",
         "DENO": "$(rlocationpath @multitool//tools/deno)",
+        "KEEP_SORTED": "$(rlocationpath @multitool//tools/keep-sorted)",
         "RUSTFMT": "$(rlocationpath @rules_rust//rust/toolchain:current_rustfmt_toolchain)",
         "SHFMT": "$(rlocationpath @multitool//tools/shfmt)",
         "TAPLO": "$(rlocationpath :taplo_tool)",
