--- a/compiler/analysis/BUILD.bazel
+++ b/compiler/analysis/BUILD.bazel
@@ -1,7 +1,7 @@
 load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
-    name = "middle",
+    name = "analysis",
     srcs = [
         "lib.rs",
         "typecheck.rs",
@@ -9,6 +9,6 @@ rust_library(
     ],
     visibility = ["//visibility:public"],
     deps = [
-        "//compiler/frontend",
+        "//compiler/parsing",
     ],
 )
