--- a/compiler/cli/BUILD.bazel
+++ b/compiler/cli/BUILD.bazel
@@ -5,8 +5,8 @@ rust_binary(
     srcs = ["main.rs"],
     visibility = ["//visibility:public"],
     deps = [
-        "//compiler/frontend",
-        "//compiler/middle",
+        "//compiler/analysis",
+        "//compiler/parsing",
         "@crates//:clap",
     ],
 )
