--- a/compiler/parsing/BUILD.bazel
+++ b/compiler/parsing/BUILD.bazel
@@ -1,7 +1,7 @@
 load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
-    name = "frontend",
+    name = "parsing",
     srcs = [
         "ast.rs",
         "diagnostics.rs",
