--- a/.bazelrc
+++ b/.bazelrc
@@ -3,6 +3,16 @@ common --enable_bzlmod
 common --incompatible_strict_action_env
 common --sandbox_default_allow_network=false
 
+# Use pre-built protoc toolchain
+# TODO(isaac): dzbarsky thinks this isn't necessary.
+common --incompatible_enable_proto_toolchain_resolution
+common --@protobuf//bazel/toolchains:prefer_prebuilt_protoc
+# https://github.com/aspect-build/toolchains_protoc?tab=readme-ov-file#ensure-protobuf-and-grpc-never-built
+common --per_file_copt=external/.*protobuf.*@--PROTOBUF_WAS_NOT_SUPPOSED_TO_BE_BUILT
+common --host_per_file_copt=external/.*protobuf.*@--PROTOBUF_WAS_NOT_SUPPOSED_TO_BE_BUILT
+common --per_file_copt=external/.*grpc.*@--GRPC_WAS_NOT_SUPPOSED_TO_BE_BUILT
+common --host_per_file_copt=external/.*grpc.*@--GRPC_WAS_NOT_SUPPOSED_TO_BE_BUILT
+
 common --aspects=//tools/bazel/aspects:wrapper_check.bzl%wrapper_check_aspect
 common --aspects=@rules_rust//rust:defs.bzl%rust_clippy_aspect
 common --output_groups=+clippy_checks
