--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,13 @@ default_install_hook_types:
 repos:
     - repo: local
       hooks:
+          - id: gazelle
+            name: Gazelle
+            entry: bazel run //:gazelle
+            language: system
+            stages: [pre-push]
+            always_run: true
+            pass_filenames: false
           - id: format
             name: Format
             entry: bazel run //:format
