--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,3 +38,10 @@ repos:
           stages: [pre-push]
           always_run: true
           pass_filenames: false
+        - id: filename_linter
+          name: Filename Linter
+          entry: bazel run //tools/filename_linter:main
+          language: system
+          stages: [pre-push]
+          always_run: true
+          pass_filenames: false
