--- a/.bazelrc
+++ b/.bazelrc
@@ -3,6 +3,8 @@ common --enable_bzlmod
 common --incompatible_strict_action_env
 common --sandbox_default_allow_network=false
 
+common --@rules_go//go/config:pure
+
 # Use pre-built protoc toolchain
 # TODO(isaac): dzbarsky thinks this isn't necessary.
 common --incompatible_enable_proto_toolchain_resolution
