Refactor to split up type checker

--- a/compiler/analysis/BUILD.bazel
+++ b/compiler/analysis/BUILD.bazel
@@ -4,7 +4,14 @@ rust_library(
     name = "analysis",
     srcs = [
         "lib.rs",
-        "typecheck.rs",
+        "type_checker/assignability.rs",
+        "type_checker/declarations.rs",
+        "type_checker/expressions.rs",
+        "type_checker/mod.rs",
+        "type_checker/naming_rules.rs",
+        "type_checker/statements.rs",
+        "type_checker/type_narrowing.rs",
+        "type_checker/unused_bindings.rs",
         "types.rs",
     ],
     visibility = ["//visibility:public"],
