Split out source/diagnostics packages

--- a/compiler/diagnostics/BUILD.bazel
+++ b/compiler/diagnostics/BUILD.bazel
@@ -1,9 +1,9 @@
 load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
-    name = "syntax",
+    name = "diagnostics",
     srcs = [
-        "ast.rs",
+        "diagnostic.rs",
         "lib.rs",
     ],
     visibility = ["//:__subpackages__"],
