--- a/compiler/analysis/BUILD.bazel
+++ b/compiler/analysis/BUILD.bazel
@@ -15,5 +15,9 @@ rust_library(
         "types.rs",
     ],
     visibility = ["//visibility:public"],
-    deps = ["//compiler/syntax"],
+    deps = [
+        "//compiler/diagnostics",
+        "//compiler/source",
+        "//compiler/syntax",
+    ],
 )
