--- a/compiler/cli/BUILD.bazel
+++ b/compiler/cli/BUILD.bazel
@@ -7,6 +7,7 @@ rust_binary(
     deps = [
         "//compiler/analysis",
         "//compiler/parsing",
+        "//compiler/source",
         "@crates//:clap",
     ],
 )
