Initial scaffolding/boilerplate for workspace discovery

--- a/compiler/source/BUILD.bazel
+++ b/compiler/source/BUILD.bazel
@@ -4,6 +4,8 @@ rust_library(
     name = "source",
     srcs = [
         "lib.rs",
+        "path_order.rs",
+        "source_file.rs",
         "span.rs",
     ],
     visibility = ["//:__subpackages__"],
