Unify file role handling, declarations

--- a/compiler/parsing/BUILD.bazel
+++ b/compiler/parsing/BUILD.bazel
@@ -6,7 +6,9 @@ rust_library(
         "lexer.rs",
         "lib.rs",
         "parser/declarations.rs",
+        "parser/exports.rs",
         "parser/expressions.rs",
+        "parser/imports.rs",
         "parser/mod.rs",
         "parser/recovery.rs",
         "parser/statements.rs",
