--- a/compiler/analysis/BUILD.bazel
+++ b/compiler/analysis/BUILD.bazel
@@ -3,6 +3,7 @@ load("//tools/bazel/macros:rust.bzl", "rust_library")
 rust_library(
     name = "analysis",
     srcs = [
+        "file_role_rules.rs",
         "lib.rs",
         "type_checker/assignability.rs",
         "type_checker/declarations.rs",
