--- a/compiler/resolution/BUILD.bazel
+++ b/compiler/resolution/BUILD.bazel
@@ -6,6 +6,7 @@ rust_library(
     visibility = ["//visibility:public"],
     deps = [
         "//compiler/diagnostics",
+        "//compiler/source",
         "//compiler/syntax",
     ],
 )
