--- a/compiler/symbols/BUILD.bazel
+++ b/compiler/symbols/BUILD.bazel
@@ -1,9 +1,9 @@
 load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
-    name = "resolution",
+    name = "symbols",
     srcs = ["lib.rs"],
-    visibility = ["//visibility:public"],
+    visibility = ["//:__subpackages__"],
     deps = [
         "//compiler/diagnostics",
         "//compiler/source",
