--- a/compiler/driver/BUILD.bazel
+++ b/compiler/driver/BUILD.bazel
@@ -10,6 +10,7 @@ rust_library(
         "//compiler/exports",
         "//compiler/file_role_rules",
         "//compiler/package_graph",
+        "//compiler/package_symbols",
         "//compiler/packages",
         "//compiler/parsing",
         "//compiler/source",
