Mechanism for enforching dependency invariants

--- a/compiler/packages/BUILD.bazel
+++ b/compiler/packages/BUILD.bazel
@@ -1,7 +1,29 @@
+load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
 load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
     name = "packages",
     srcs = ["lib.rs"],
     visibility = ["//:__subpackages__"],
+)
+
+dependency_enforcement_test(
+    name = "packages_forbidden_dependencies",
+    forbidden = [
+        "//compiler/binding",
+        "//compiler/diagnostics",
+        "//compiler/driver",
+        "//compiler/exports",
+        "//compiler/file_role_rules",
+        "//compiler/package_graph",
+        "//compiler/package_symbols",
+        "//compiler/parsing",
+        "//compiler/source",
+        "//compiler/symbols",
+        "//compiler/syntax",
+        "//compiler/typecheck",
+        "//compiler/visibility",
+        "//compiler/workspace",
+    ],
+    target = ":packages",
 )
