--- a/compiler/binding/BUILD.bazel
+++ b/compiler/binding/BUILD.bazel
@@ -1,3 +1,4 @@
+load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
 load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
@@ -9,4 +10,19 @@ rust_library(
         "//compiler/symbols",
         "//compiler/visibility",
     ],
+)
+
+dependency_enforcement_test(
+    name = "binding_forbidden_dependencies",
+    forbidden = [
+        "//compiler/driver",
+        "//compiler/file_role_rules",
+        "//compiler/package_graph",
+        "//compiler/package_symbols",
+        "//compiler/packages",
+        "//compiler/parsing",
+        "//compiler/typecheck",
+        "//compiler/workspace",
+    ],
+    target = ":binding",
 )
