--- a/compiler/package_symbols/BUILD.bazel
+++ b/compiler/package_symbols/BUILD.bazel
@@ -1,3 +1,4 @@
+load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
 load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
@@ -10,4 +11,20 @@ rust_library(
         "//compiler/syntax",
         "//compiler/typecheck",
     ],
+)
+
+dependency_enforcement_test(
+    name = "package_symbols_forbidden_dependencies",
+    forbidden = [
+        "//compiler/binding",
+        "//compiler/driver",
+        "//compiler/exports",
+        "//compiler/file_role_rules",
+        "//compiler/package_graph",
+        "//compiler/parsing",
+        "//compiler/symbols",
+        "//compiler/visibility",
+        "//compiler/workspace",
+    ],
+    target = ":package_symbols",
 )
