--- a/compiler/parsing/BUILD.bazel
+++ b/compiler/parsing/BUILD.bazel
@@ -1,3 +1,4 @@
+load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
 load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
@@ -20,4 +21,22 @@ rust_library(
         "//compiler/source",
         "//compiler/syntax",
     ],
+)
+
+dependency_enforcement_test(
+    name = "parsing_forbidden_dependencies",
+    forbidden = [
+        "//compiler/binding",
+        "//compiler/driver",
+        "//compiler/exports",
+        "//compiler/file_role_rules",
+        "//compiler/package_graph",
+        "//compiler/package_symbols",
+        "//compiler/packages",
+        "//compiler/symbols",
+        "//compiler/typecheck",
+        "//compiler/visibility",
+        "//compiler/workspace",
+    ],
+    target = ":parsing",
 )
