--- a/compiler/source/BUILD.bazel
+++ b/compiler/source/BUILD.bazel
@@ -1,3 +1,4 @@
+load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
 load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
@@ -9,4 +10,25 @@ rust_library(
         "span.rs",
     ],
     visibility = ["//:__subpackages__"],
+)
+
+dependency_enforcement_test(
+    name = "source_forbidden_dependencies",
+    forbidden = [
+        "//compiler/binding",
+        "//compiler/diagnostics",
+        "//compiler/driver",
+        "//compiler/exports",
+        "//compiler/file_role_rules",
+        "//compiler/package_graph",
+        "//compiler/package_symbols",
+        "//compiler/packages",
+        "//compiler/parsing",
+        "//compiler/symbols",
+        "//compiler/syntax",
+        "//compiler/typecheck",
+        "//compiler/visibility",
+        "//compiler/workspace",
+    ],
+    target = ":source",
 )
