--- a/compiler/syntax/BUILD.bazel
+++ b/compiler/syntax/BUILD.bazel
@@ -1,3 +1,4 @@
+load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
 load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
@@ -8,4 +9,24 @@ rust_library(
     ],
     visibility = ["//:__subpackages__"],
     deps = ["//compiler/source"],
+)
+
+dependency_enforcement_test(
+    name = "syntax_forbidden_dependencies",
+    forbidden = [
+        "//compiler/binding",
+        "//compiler/diagnostics",
+        "//compiler/driver",
+        "//compiler/exports",
+        "//compiler/file_role_rules",
+        "//compiler/package_graph",
+        "//compiler/package_symbols",
+        "//compiler/packages",
+        "//compiler/parsing",
+        "//compiler/symbols",
+        "//compiler/typecheck",
+        "//compiler/visibility",
+        "//compiler/workspace",
+    ],
+    target = ":syntax",
 )
