Compiler architecture refactor 1/N

--- a/compiler/file_role_rules/BUILD.bazel
+++ b/compiler/file_role_rules/BUILD.bazel
@@ -23,6 +23,8 @@ dependency_enforcement_test(
         "//compiler/packages",
         "//compiler/parsing",
         "//compiler/symbols",
+        "//compiler/semantic_types",
+        "//compiler/type_analysis",
         "//compiler/typecheck",
         "//compiler/visibility",
         "//compiler/workspace",
