--- a/compiler/source/BUILD.bazel
+++ b/compiler/source/BUILD.bazel
@@ -26,6 +26,8 @@ dependency_enforcement_test(
         "//compiler/parsing",
         "//compiler/symbols",
         "//compiler/syntax",
+        "//compiler/semantic_types",
+        "//compiler/type_analysis",
         "//compiler/typecheck",
         "//compiler/visibility",
         "//compiler/workspace",
