--- a/compiler/visibility/BUILD.bazel
+++ b/compiler/visibility/BUILD.bazel
@@ -24,6 +24,8 @@ dependency_enforcement_test(
         "//compiler/package_symbols",
         "//compiler/packages",
         "//compiler/parsing",
+        "//compiler/semantic_types",
+        "//compiler/type_analysis",
         "//compiler/typecheck",
         "//compiler/workspace",
     ],
