--- a/compiler/symbols/BUILD.bazel
+++ b/compiler/symbols/BUILD.bazel
@@ -23,6 +23,8 @@ dependency_enforcement_test(
         "//compiler/package_symbols",
         "//compiler/packages",
         "//compiler/parsing",
+        "//compiler/semantic_types",
+        "//compiler/type_analysis",
         "//compiler/typecheck",
         "//compiler/visibility",
         "//compiler/workspace",
