--- a/compiler/workspace/BUILD.bazel
+++ b/compiler/workspace/BUILD.bazel
@@ -37,6 +37,8 @@ dependency_enforcement_test(
         "//compiler/parsing",
         "//compiler/symbols",
         "//compiler/syntax",
+        "//compiler/semantic_types",
+        "//compiler/type_analysis",
         "//compiler/typecheck",
         "//compiler/visibility",
     ],
