--- a/compiler/driver/BUILD.bazel
+++ b/compiler/driver/BUILD.bazel
@@ -13,6 +13,7 @@ rust_library(
         "//compiler/package_symbols",
         "//compiler/packages",
         "//compiler/parsing",
+        "//compiler/semantic_lowering",
         "//compiler/source",
         "//compiler/symbols",
         "//compiler/syntax",
