Remove typecheck facade and enforce semantic program boundaries

--- a/compiler/driver/BUILD.bazel
+++ b/compiler/driver/BUILD.bazel
@@ -14,10 +14,11 @@ rust_library(
         "//compiler/packages",
         "//compiler/parsing",
         "//compiler/semantic_lowering",
+        "//compiler/semantic_program",
         "//compiler/source",
         "//compiler/symbols",
         "//compiler/syntax",
-        "//compiler/typecheck",
+        "//compiler/type_analysis",
         "//compiler/visibility",
         "//compiler/workspace",
     ],
