--- a/compiler/package_symbols/BUILD.bazel
+++ b/compiler/package_symbols/BUILD.bazel
@@ -7,9 +7,9 @@ rust_library(
     visibility = ["//visibility:public"],
     deps = [
         "//compiler/packages",
+        "//compiler/semantic_program",
         "//compiler/semantic_types",
         "//compiler/source",
-        "//compiler/syntax",
     ],
 )
 
@@ -22,9 +22,9 @@ dependency_enforcement_test(
         "//compiler/file_role_rules",
         "//compiler/package_graph",
         "//compiler/parsing",
+        "//compiler/syntax",
         "//compiler/symbols",
         "//compiler/type_analysis",
-        "//compiler/typecheck",
         "//compiler/visibility",
         "//compiler/workspace",
     ],
