--- a/compiler/syntax_rules/BUILD.bazel
+++ b/compiler/syntax_rules/BUILD.bazel
@@ -7,6 +7,7 @@ rust_library(
     visibility = ["//visibility:public"],
     deps = [
         "//compiler/diagnostics",
+        "//compiler/source",
         "//compiler/syntax",
     ],
 )
