--- a/compiler/phase_results/BUILD.bazel
+++ b/compiler/phase_results/BUILD.bazel
@@ -1,22 +1,27 @@
+load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
 load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
-    name = "driver",
+    name = "phase_results",
     srcs = ["lib.rs"],
     visibility = ["//visibility:public"],
-    deps = [
+    deps = ["//compiler/diagnostics"],
+)
+
+dependency_enforcement_test(
+    name = "phase_results_forbidden_dependencies",
+    forbidden = [
         "//compiler/binding",
-        "//compiler/diagnostics",
+        "//compiler/driver",
         "//compiler/exports",
         "//compiler/file_role_rules",
         "//compiler/package_graph",
         "//compiler/package_symbols",
         "//compiler/packages",
         "//compiler/parsing",
-        "//compiler/phase_results",
         "//compiler/semantic_lowering",
         "//compiler/semantic_program",
-        "//compiler/source",
+        "//compiler/semantic_types",
         "//compiler/symbols",
         "//compiler/syntax",
         "//compiler/syntax_rules",
@@ -24,4 +29,5 @@ rust_library(
         "//compiler/visibility",
         "//compiler/workspace",
     ],
+    target = ":phase_results",
 )
