--- a/compiler/driver/BUILD.bazel
+++ b/compiler/driver/BUILD.bazel
@@ -5,19 +5,16 @@ rust_library(
     srcs = ["lib.rs"],
     visibility = ["//visibility:public"],
     deps = [
-        "//compiler/binding",
         "//compiler/diagnostics",
-        "//compiler/exports",
         "//compiler/file_role_rules",
-        "//compiler/package_graph",
         "//compiler/package_symbols",
         "//compiler/packages",
         "//compiler/parsing",
         "//compiler/phase_results",
+        "//compiler/resolution",
         "//compiler/semantic_lowering",
         "//compiler/semantic_program",
         "//compiler/source",
-        "//compiler/symbols",
         "//compiler/syntax",
         "//compiler/syntax_rules",
         "//compiler/type_analysis",
