--- a/compiler/diagnostics/BUILD.bazel
+++ b/compiler/diagnostics/BUILD.bazel
@@ -3,10 +3,7 @@ load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
     name = "diagnostics",
-    srcs = [
-        "diagnostic.rs",
-        "lib.rs",
-    ],
+    srcs = ["lib.rs"],
     visibility = ["//:__subpackages__"],
     deps = ["//compiler/source"],
 )
