--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ syn = { version = "^2.0.116", features = ["full", "parsing", "visit"] }
 # Our crate names use double underscore as path separator.
 non_snake_case = "allow"
 
+unreachable_pub = "warn"
 unused_qualifications = "warn"
 
 [lints.clippy]
