--- a/compiler/executable_program/BUILD.bazel
+++ b/compiler/executable_program/BUILD.bazel
@@ -1,13 +1,23 @@
+load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement_test")
 load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
-    name = "driver",
+    name = "executable_program",
     srcs = ["lib.rs"],
     visibility = ["//visibility:public"],
-    deps = [
+    deps = ["@crates//:serde"],
+)
+
+dependency_enforcement_test(
+    name = "executable_program_forbidden_dependencies",
+    forbidden = [
+        "//compiler/binding",
         "//compiler/diagnostics",
+        "//compiler/driver",
         "//compiler/executable_lowering",
+        "//compiler/exports",
         "//compiler/file_role_rules",
+        "//compiler/package_graph",
         "//compiler/package_symbols",
         "//compiler/packages",
         "//compiler/parsing",
@@ -17,11 +27,14 @@ rust_library(
         "//compiler/rust_backend",
         "//compiler/semantic_lowering",
         "//compiler/semantic_program",
+        "//compiler/semantic_types",
         "//compiler/source",
+        "//compiler/symbols",
         "//compiler/syntax",
         "//compiler/syntax_rules",
         "//compiler/type_analysis",
         "//compiler/visibility",
         "//compiler/workspace",
     ],
+    target = ":executable_program",
 )
